# data-structures

./: README.md  array-test.bat  build.bat  build.sh  dockerfile  gmon.out  heap-test.bat  out.txt  plik.txt  random-data.txt  run.bat  run.sh  run_image.sh
data_structures_library/: CMakeLists.txt
data_structures_library/include/: dynamic-array.hpp
data_structures_library/src/: dynamic-array.cpp
docs/: versions.md
docs/data_structures_library/: dynamic-array.md
docs/img/: dynamic-array.drawio  project-structure.drawio
headers/app/modules/: ArrayModule.h  BSTModule.h  HeapModule.h  ListModule.h  Module.h
headers/app/utility/: FileWriter.h  RandomNumberGenerator.h
headers/data-structures/: BinarySearchTree.h  DynamicArray.h  Heap.h  List.h
headers/examinations/: ArrayExamination.h  BSTExamination.h  ExaminationRecord.h  HeapExamination.h  ListExamination.h
src/: main.cpp
src/app/modules/: ArrayModule.cpp  BSTModule.cpp  HeapModule.cpp  ListModule.cpp  Module.cpp
src/app/utility/: FileReader.cpp  FileWriter.cpp  RandomNumberGenerator.cpp
src/data-structures/: BinarySearchTree.cpp  DynamicArray.cpp  Heap.cpp  List.cpp  random-data.txt
src/examinations/: ArrayExamination.cpp  BSTExamination.cpp  ExaminationRecord.cpp  HeapExamination.cpp  ListExamination.cpp
src/headers/: DynamicArray.h  List.h  Menu.h
src/headers/app/: Console.h  ListModule.h  Module.h
src/headers/data-structures/: DynamicArray.h  Heap.h  List.h
src/source/: DynamicArray.cpp  Heap.cpp  List.cpp  main.cpp
test/: TestArray.cpp  TestBST.cpp  TestHeap.cpp
(+23 files in other folders)
